--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
             "email": "josip.opacic@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "php": "^7.0"
+    },
     "require-dev": {
         "phpunit/phpunit": "^6"
     },
